# llamachat

./: .gitignore  BUILD.md  LICENSE  README.md  hello.py  llamachat.icns  llamachat.spec  pyproject.toml  requirements.txt
llamachat/: __init__.py  __main__.py  config.py  main.py
llamachat/database/: database.py  models.py
llamachat/services/: database_service.py  ollama_service.py
llamachat/ui/: chat_input.py  chat_widget.py  main_window.py
llamachat/ui/delegates/: chat_delegate.py
llamachat/ui/models/: chat_list_model.py  chat_message.py
llamachat/ui/widgets/: inline_loading.py  loading_indicator.py  overlay_loading.py
llamachat/utils/: setup.py
