[project]
name = "llamachat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "markdown>=3.7",
    "ollama>=0.4.4",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "qasync>=0.27.1",
    "sqlmodel>=0.0.22",
]
