[project]
name = "llamachat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "backoff>=2.2.1",
    "markdown>=3.7",
    "ollama>=0.4.4",
    "pyqt6>=6.7.1",
    "python-dotenv>=1.0.1",
    "qasync>=0.27.1",
    "sqlmodel>=0.0.22",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.11.1",
]
